make changes in autostart and few other minor changes

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -30,6 +30,13 @@ exec-once = ~/dotfiles/hypr/scripts/ml4w-welcome-autostart.sh
 # Start ewww daemon
 exec-once = ~/dotfiles/hypr/scripts/eww.sh
 
+# Start password manager KeePassXC
+exec-once = [workspace 9 silent] keepassxc
+
+# Start my workspace
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] alacritty
+
 # Start autostart cleanup
 exec-once = ~/dotfiles/hypr/scripts/cleanup.sh
 
