--- a/hypr/conf/keyboard.conf
+++ b/hypr/conf/keyboard.conf
@@ -3,8 +3,8 @@
 # https://wiki.hyprland.org/Configuring/Variables/#input
 # -----------------------------------------------------
 input {
-    kb_layout = custom
-    kb_variant = capewell-qwerf2k6
+    kb_layout = ee
+    kb_variant = us
     kb_model =
     kb_options = ctrl:nocaps
     numlock_by_default = true
