--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -31,11 +31,11 @@ listener {
 # dpms
 listener {
     # DPMS TIMEOUT
-    timeout = 660
+    timeout = 0
     # DPMS ONTIMEOUT
-    on-timeout = hyprctl dispatch dpms off
+    # on-timeout = hyprctl dispatch dpms off
     # DPMS ONRESUME
-    on-resume = hyprctl dispatch dpms on
+    # on-resume = hyprctl dispatch dpms on
 }
 
 # Suspend
