--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -32,6 +32,7 @@ exec-once = ~/dotfiles/hypr/scripts/eww.sh
 
 # Start password manager KeePassXC
 exec-once = [workspace 9 silent] keepassxc
+exec-once = [workspace 9 silent] corectrl 
 
 # Start my workspace
 exec-once = [workspace 1 silent] firefox
