--- a/hypr/conf/monitors/2560x1440@144.conf
+++ b/hypr/conf/monitors/2560x1440@144.conf
@@ -3,4 +3,5 @@
 # name: "2560x1440"
 # ----------------------------------------------------- 
 
-monitor=,2560x1440@143,auto,1
+monitor=,2560x1440@143,auto,1,bitdepth, 10
+
