--- a/hypr/conf/keybindings/default.conf
+++ b/hypr/conf/keybindings/default.conf
@@ -10,7 +10,7 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, ~/dotfiles/.settings/terminal.sh # Open the terminal
 bind = $mainMod, B, exec, ~/dotfiles/.settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/dotfiles/.settings/filemanager.sh # Open the filemanager
-bind = $mainMod, D, exec, discord 
+bind = $mainMod, D, exec, vesktop 
 # Windows
 bind = $mainMod, C, killactive # Kill active window
 bind = $mainMod, F, fullscreen # Set active window to fullscreen
