add nvim-surroundings plugin, change nvim line numbers to hybrid

--- a/.settings/settings.json
+++ b/.settings/settings.json
@@ -33,7 +33,7 @@
     },
     {
         "key": "waybar_chatgpt",
-        "value": true
+        "value": false
     },
     {
         "key": "waybar_systray",
