create symlink for sddm theme

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -34,9 +34,12 @@ exec-once = ~/dotfiles/hypr/scripts/eww.sh
 exec-once = [workspace 9 silent] keepassxc
 exec-once = [workspace 9 silent] corectrl 
 
+# Start syncthing
+exec-once = syncting
+
 # Start my workspace
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] alacritty
+exec-once = [workspace 2 silent] ~/dotfiles/.settings/terminal.sh
 
 # Start autostart cleanup
 exec-once = ~/dotfiles/hypr/scripts/cleanup.sh
