add keybinds for changing window locations
fixed little path error in create_symlinks.sh

--- a/hypr/conf/keybindings/default.conf
+++ b/hypr/conf/keybindings/default.conf
@@ -23,6 +23,10 @@ bind = $mainMod, K, movefocus, u # Move focus up
 bind = $mainMod, J, movefocus, d # Move focus down
 bindm = $mainMod, mouse:272, movewindow # Move window with the mouse
 bindm = $mainMod, mouse:273, resizewindow # Resize window with the mouse
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 bind = $mainMod SHIFT, right, resizeactive, 100 0 # Increase window width with keyboard
 bind = $mainMod SHIFT, left, resizeactive, -100 0 # Reduce window width with keyboard
 bind = $mainMod SHIFT, down, resizeactive, 0 100 # Increase window height with keyboard
