--- a/hypr/conf/keybindings/default.conf
+++ b/hypr/conf/keybindings/default.conf
@@ -11,6 +11,7 @@ bind = $mainMod, RETURN, exec, ~/dotfiles/.settings/terminal.sh # Open the termi
 bind = $mainMod, B, exec, ~/dotfiles/.settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/dotfiles/.settings/filemanager.sh # Open the filemanager
 bind = $mainMod, D, exec, vesktop 
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
 # Windows
 bind = $mainMod, C, killactive # Kill active window
 bind = $mainMod, F, fullscreen # Set active window to fullscreen
@@ -47,7 +48,7 @@ bind = $mainMod SHIFT, R, exec, ~/dotfiles/hypr/scripts/loadconfig.sh # Reload h
 bind = $mainMod, V, exec, ~/dotfiles/scripts/cliphist.sh # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/dotfiles/waybar/themeswitcher.sh # Open waybar theme switcher
 bind = $mainMod CTRL, S, exec, ~/dotfiles/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
-bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/hyprshade.sh # Toggle screenshader
+bind = $mainMod SHIFT, P, exec, ~/dotfiles/hypr/scripts/hyprshade.sh # Toggle screenshader
 bind = $mainMod ALT, G, exec, ~/dotfiles/hypr/scripts/gamemode.sh # Toggle game mode
 
 # Workspaces
