add window rules for godot popups

--- a/hypr/conf/windowrules/default.conf
+++ b/hypr/conf/windowrules/default.conf
@@ -9,3 +9,6 @@ windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(qalculate-gtk)$
+
+windowrulev2 = size 70% 60%, initialClass:(Godot), title:(\w)
+windowrulev2 = center, initialClass:(Godot), title:(\w)
