remove atuin from zshrc, update decorations conf to use the meet the new hyprlands requirments

--- a/.settings/settings.json
+++ b/.settings/settings.json
@@ -45,7 +45,7 @@
     },
     {
         "key": "waybar_window",
-        "value": true
+        "value": false
     },
     {
         "key": "hypridle_hyprlock_timeout",
