--- a/hypr/conf/decorations/rounding-all-blur-no-shadows.conf
+++ b/hypr/conf/decorations/rounding-all-blur-no-shadows.conf
@@ -18,8 +18,11 @@ decoration {
     inactive_opacity = 0.6
     fullscreen_opacity = 0.9
 
-    drop_shadow = false
-    shadow_range = 30
-    shadow_render_power = 3
-    col.shadow = 0x66000000
+    shadow {
+        enabled = true
+        range = 30
+        render_power = 3
+        color = 0x66000000
+    }
+
 }
