--- a/sddm/default.conf
+++ b/sddm/default.conf
@@ -44,10 +44,10 @@ RebootCommand=/usr/bin/systemctl reboot
 Current=monochrome
 
 # Cursor size used in the greeter
-CursorSize=
+CursorSize=16
 
 # Cursor theme used in the greeter
-CursorTheme=
+CursorTheme=Bibata-Modern-Classic
 
 # Number of users to use as threshold
 # above which avatars are disabled
