--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,7 @@ set-option -g status-style bg=default
 set -g status-fg '#007a7b' 
 set -g pane-active-border-style fg='#007a7b'
 set -g pane-border-style fg='#545342'
+set -g mode-style "fg=black,bg=#007a7b"
 
 # Set firs window index to be 1
 set -g base-index 1
