--- a/hypr/conf/windowrules/default.conf
+++ b/hypr/conf/windowrules/default.conf
@@ -10,5 +10,10 @@ windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(qalculate-gtk)$
 
+# Center godot popups
 windowrulev2 = size 70% 60%, initialClass:(Godot), title:(\w)
 windowrulev2 = center, initialClass:(Godot), title:(\w)
+
+# Center Volume Control applet
+windowrulev2 = float, title:Volume Control
+windowrulev2 = minsize 800 500, title:Volume Control
