--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -9,8 +9,8 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # Start Polkit
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# Load Dunst Notification Manager
-exec-once = dunst
+# # Load Dunst Notification Manager
+# exec-once = dunst
 
 # Load GTK settings
 exec-once = ~/dotfiles/hypr/scripts/gtk.sh
@@ -21,14 +21,17 @@ exec-once = hypridle
 # Load cliphist history
 exec-once = wl-paste --watch cliphist store
 
-# Initialize Wallpaper Engine
-exec-once = ~/dotfiles/hypr/scripts/init-wallpaper-engine.sh
+# # Initialize Wallpaper Engine
+# exec-once = ~/dotfiles/hypr/scripts/init-wallpaper-engine.sh
 
 # Autostart ML4W App
 exec-once = ~/dotfiles/hypr/scripts/ml4w-welcome-autostart.sh
 
 # Start ewww daemon
 exec-once = ~/dotfiles/hypr/scripts/eww.sh
+
+# Start Hyprpannel
+exec-once = hyprpanel
 
 # Start password manager KeePassXC
 exec-once = [workspace 9 silent] keepassxc
