Add laptop config for hyprpanel, add a few packages to install script.

--- a/hyprpanel/hyprpanel_config_laptop.json
+++ b/hyprpanel/hyprpanel_config_laptop.json
@@ -62,6 +62,8 @@
       ],
       "right": [
         "volume",
+        "bluetooth",
+        "battery",
         "network",
         "clock",
         "notifications"
