--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -46,7 +46,7 @@ background = "CellForeground"
 
 [colors.normal]
 black = "#081011"
-red = "#46583B"
+red = "#8C2F2F"
 green = "#3B5043"
 yellow = "#3F6145"
 blue = "#475848"
@@ -56,7 +56,7 @@ white = "#c1c3c3"
 
 [colors.bright]
 black = "#57676a"
-red = "#46583B"
+red = "#8C2F2F"
 green = "#3B5043"
 yellow = "#3F6145"
 blue = "#475848"
@@ -66,7 +66,7 @@ white = "#c1c3c3"
 
 [colors.dim]
 black = "#c1c3c3"
-red = "#46583B"
+red = "#8C2F2F"
 green = "#536750"
 yellow = "#3F6145"
 blue = "#475848"
