--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -41,7 +41,7 @@ exec-once = [workspace 9 silent] corectrl
 exec-once = syncting
 
 # Start my workspace
-exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 1 silent] ~/dotfiles/.settings/browser.sh 
 exec-once = [workspace 2 silent] ~/dotfiles/.settings/terminal.sh
 
 # Start autostart cleanup
