Add diffview and namu plugins for nvim. Change some hyprland settings

--- a/hypr/conf/windowrules/default.conf
+++ b/hypr/conf/windowrules/default.conf
@@ -17,3 +17,10 @@ windowrulev2 = center, initialClass:(Godot), title:(\w)
 # Center Volume Control applet
 windowrulev2 = float, title:Volume Control
 windowrulev2 = minsize 800 500, title:Volume Control
+
+# Android studio
+windowrulev2 = stayfocused, class:jetbrains-studio, floating:0
+windowrulev2 = noinitialfocus, class:jetbrains-studio, floating:1
+
+# Vesktop
+windowrulev2 = workspace 3 silent, class:vesktop
