--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -49,3 +49,6 @@ exec-once = ~/dotfiles/hypr/scripts/cleanup.sh
 
 # Load configuration from ML4W Hyprland Settings App
 exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
+
+# Stop dunst otherwise hyprpanel won't work
+exec-once = systemctl stop dunst --user
