Update window rules with new hyprlands syntax

--- a/hypr/conf/windowrules/default.conf
+++ b/hypr/conf/windowrules/default.conf
@@ -2,25 +2,17 @@
 # Window rules
 # ----------------------------------------------------- 
 
-windowrule = tile,^(Microsoft-edge)$
-windowrule = tile,^(Brave-browser)$
-windowrule = tile,^(Chromium)$
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-windowrule = float,^(qalculate-gtk)$
-
 # Center godot popups
-windowrulev2 = size 70% 60%, initialClass:(Godot), title:(\w)
-windowrulev2 = center, initialClass:(Godot), title:(\w)
+windowrule = size 70% 60%, initialClass:(Godot), title:(\w)
+windowrule = center, initialClass:(Godot), title:(\w)
 
 # Center Volume Control applet
-windowrulev2 = float, title:Volume Control
-windowrulev2 = minsize 800 500, title:Volume Control
+windowrule = float, title:Volume Control
+windowrule = minsize 800 500, title:Volume Control
 
 # Android studio
-windowrulev2 = stayfocused, class:jetbrains-studio, floating:0
-windowrulev2 = noinitialfocus, class:jetbrains-studio, floating:1
+windowrule = stayfocused, class:jetbrains-studio, floating:0
+windowrule = noinitialfocus, class:jetbrains-studio, floating:1
 
 # Vesktop
-windowrulev2 = workspace 3 silent, class:vesktop
+windowrule = workspace 3 silent, class:vesktop
