Add vencord to autostart

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -43,6 +43,7 @@ exec-once = syncting
 # Start my workspace
 exec-once = [workspace 1 silent] ~/dotfiles/.settings/browser.sh 
 exec-once = [workspace 2 silent] ~/dotfiles/.settings/terminal.sh
+exec-once = [workspace 3 silent] vesktop
 
 # Start autostart cleanup
 exec-once = ~/dotfiles/hypr/scripts/cleanup.sh
