Make screenshotting freeze the screen

--- a/hypr/conf/keybindings/default.conf
+++ b/hypr/conf/keybindings/default.conf
@@ -11,7 +11,7 @@ bind = $mainMod, RETURN, exec, ~/dotfiles/.settings/terminal.sh # Open the termi
 bind = $mainMod, B, exec, ~/dotfiles/.settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/dotfiles/.settings/filemanager.sh # Open the filemanager
 bind = $mainMod, D, exec, vesktop 
-bind = $mainMod SHIFT, S, exec, hyprshot -m region
+bind = $mainMod SHIFT, S, exec, hyprshot -m region --freeze
 # Windows
 bind = $mainMod, C, killactive # Kill active window
 bind = $mainMod, F, fullscreen # Set active window to fullscreen
