--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,47 +1,12 @@
-unbind r
-bind r source-file ~/.tmux.conf
+# Load configs
 
-set -g prefix C-s
+source-file ~/.config/tmux/.tmux.binds.conf
 
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R 
+source-file ~/.config/tmux/.tmux.options.conf
 
-set -s set-clipboard on
-set -g mouse on
-set -g @yank_selection 'primary'
-set -g @yank_selection_mouse 'clipboard'
+source-file ~/.config/tmux/.tmux.plugins.conf
 
-
-set-option -g status-style bg=default
-set -g status-fg '#007a7b' 
-set -g pane-active-border-style fg='#007a7b'
-set -g pane-border-style fg='#545342'
-set -g mode-style "fg=black,bg=#007a7b"
-
-# Set firs window index to be 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'niksingh710/minimal-tmux-status'
-
-set -g @minimal-tmux-use-arrow true
-set -g @minimal-tmux-right-arrow ''
-set -g @minimal-tmux-left-arrow ''
-
-set -g @minimal-tmux-bg '#007a7b'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+source-file ~/.config/tmux/.tmux.theme.conf
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
