Make chucknorris jokes work in hyprlock, add fastfetch to terminal start

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -42,7 +42,7 @@ input-field {
 }
 
 label {
-    text = cmd[update:60000] curl -s https://api.chucknorris.io/jokes/random | jq -r '.value' | fold -s -w 50
+    text = cmd[update:60000] /home/patrick/dotfiles/hypr/scripts/chuck-norris.sh
     color = rgb(D9D6B7)
     font_size = 16 
     font_family = Fira Semibold
