--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,6 +1,7 @@
 //  Thanks to Bina
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "source": "~/Downloads/giphy.webp",
   "logo": {
       "padding": {
       "top": 2
