--- a/hypr/conf/keyboard.conf
+++ b/hypr/conf/keyboard.conf
@@ -5,14 +5,14 @@
 input {
     kb_layout = ee
     kb_variant = us
-    kb_model =
+    kb_model = 
     kb_options = ctrl:nocaps
     numlock_by_default = true
     mouse_refocus = false
     
     # For United States
     # kb_layout = us
-    # kb_variant = intl
+    # kb_variant = intlus
     # kb_model = pc105
     # kb_options =
 
