Hypr breaking changes

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -31,7 +31,7 @@ exec-once = ~/dotfiles/hypr/scripts/ml4w-welcome-autostart.sh
 exec-once = ~/dotfiles/hypr/scripts/eww.sh
 
 # Start Hyprpannel
-exec-once = hyprpanel
+exec-once = /usr/share/hyprpanel/hyprpanel.js
 
 # Start password manager KeePassXC
 exec-once = [workspace 9 silent] keepassxc
